fixed cards on mobile

--- a/style/style.sass
+++ b/style/style.sass
@@ -218,8 +218,7 @@ footer
         max-width: 85vw
     .grid
         width: min-content
-        display: flex
-        flex-direction: column
+        display: block
     footer
         padding-right: 0.5em
         padding-left: 0.5em
